force-app/main/default/objects/Financial_Assistance__c/Financial_Assistance__c.object-meta.xml
<CustomObject>
    <label>Financial Assistance</label>
    <nameField>
        <displayFormat>FA-{yy}{mm}{dd}{00}</displayFormat>
        <label>FA No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Assistance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>