force-app/main/default/objects/Financial_Assistance__c/fields/Case_File_No__c.field-meta.xml
<CustomField>
    <fullName>Case_File_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case File No.</label>
    <referenceTo>Case_File__c</referenceTo>
    <relationshipLabel>Financial Assistance</relationshipLabel>
    <relationshipName>Financial_Assistance</relationshipName>
    <type>Lookup</type>
</CustomField>