force-app/main/default/objects/Financial_Assistance__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Assistance</relationshipLabel>
    <relationshipName>Financial_Assistance</relationshipName>
    <type>Lookup</type>
</CustomField>