force-app/main/default/objects/Financial_Assistance__c/fields/Net_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Monthly_Income__c</fullName>
    <formula>Total_Income__c  -  Total_Monthly_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>