force-app/main/default/objects/Financial_Assistance__c/fields/Sub_total_Monthy_Loan__c.field-meta.xml
<CustomField>
    <fullName>Sub_total_Monthy_Loan__c</fullName>
    <label>Sub-total Monthy Loan</label>
    <summarizedField>Expenses__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expenses__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Loan</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Expenses__c.Frequency__c</field>
        <operation>equals</operation>
        <value>Monthly</value>
    </summaryFilterItems>
    <summaryForeignKey>Expenses__c.FA_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>