force-app/main/default/objects/Financial_Assistance__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>Total Income</label>
    <summarizedField>Household_Income__c.Monthly_Salary__c</summarizedField>
    <summaryForeignKey>Household_Income__c.FA_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>