force-app/main/default/objects/Financial_Assistance__c/fields/Total_Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expenses__c</fullName>
    <formula>Sub_total_MonthlyExpenses__c  +  Sub_total_Monthy_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>